--- a/Visualization Decision Trees/packages.config
+++ b/Visualization Decision Trees/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="12.2.2" targetFramework="net471" />
   <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net471" />
 </packages>
